Replace Collections with List